update ft example

--- a/example_notebooks/flowtuple_example.ipynb
+++ b/example_notebooks/flowtuple_example.ipynb
@@ -726,7 +726,7 @@
    ],
    "source": [
     "proto_filter = set([\n",
-    "    17\n",
+    "    17 # UDP\n",
     "])\n",
     "\n",
     "print(f'Protocol filter cardinality: {len(proto_filter)}')"
@@ -1618,6 +1618,50 @@
    ],
    "source": [
     "result.sort_values(by='count(src_ip)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3fc7eab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resultcountry = spark_df.groupby('netacq_country').agg(\n",
+    "    F.sum('packet_cnt'), \n",
+    ").toPandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56a08312",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resultcountry"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca6f83b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resultasn= spark_df.groupby('prefix2asn').agg(\n",
+    "    F.sum('packet_cnt'), \n",
+    ").toPandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9dc0cfe4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resultasn"
    ]
   }
  ],
