--- a/example_notebooks/flowtuple_example.ipynb
+++ b/example_notebooks/flowtuple_example.ipynb
@@ -159,8 +159,8 @@
    "outputs": [],
    "source": [
     "# Set your swift credentials\n",
-    "UCSD_NT_S3_ACCESS_KEY = \"\"\n",
-    "UCSD_NT_S3_SECRET_KEY = \"\""
+    "UCSD_NT_S3_ACCESS_KEY = %env UCSD_NT_S3_ACCESS_KEY\n",
+    "UCSD_NT_S3_SECRET_KEY = %env UCSD_NT_S3_SECRET_KEY"
    ]
   },
   {
